Update licensing information in index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
  * 1. CÓDIGO FUENTE (Lógica de programación, scripts, funciones): 
  *    Licenciado bajo la Licencia Apache, Versión 2.0 (la "Licencia"); 
  *    no puede usar este código excepto en cumplimiento con la Licencia. 
- *    Puede obtener una copia en: http://www.apache.org
+ *    Puede obtener una copia en: http://www.https://www.apache.org/licenses/LICENSE-2.0.txt
  * 
  * 2. CONTENIDO TEXTUAL (Cualquier texto, documentación o activos creativos): 
- *    Licenciado bajo Creative Commons Attribution-ShareAlike 3.0 Unported 
- *    (CC BY-SA 3.0). Ver: https://creativecommons.org
- *    Este trabajo es un traducción al español de la obra Thesaurus Precum de León Dehon
- *    que ha pasado al domino público.
+ *    Licenciado bajo Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International 
+ *    (CC-BY-NC-SA-4.0). Ver: https://https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.txt
+ *    Este trabajo es un traducción al español de la obra Catéchisme de l'Église Catholique
+ *    de The IntraText Digital Library, licenciado bajo CC-BY-NC-SA-3.0.
  * 
  * Salvo que lo exija la ley aplicable o se acuerde por escrito, el software 
  * distribuido bajo la Licencia se distribuye "TAL CUAL", SIN GARANTÍAS NI 
@@ -23,7 +23,6 @@
  * SPDX-License-Identifier: Apache-2.0 AND CC-BY-NC-SA-4.0
  */
 -->
-
 <html lang="es">
 <head>
     <meta charset="UTF-8">
