Fix incorrect URLs in index.html
Corrected URLs in license information.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
  * 1. CÓDIGO FUENTE (Lógica de programación, scripts, funciones): 
  *    Licenciado bajo la Licencia Apache, Versión 2.0 (la "Licencia"); 
  *    no puede usar este código excepto en cumplimiento con la Licencia. 
- *    Puede obtener una copia en: http://www.https://www.apache.org/licenses/LICENSE-2.0.txt
+ *    Puede obtener una copia en: https://www.apache.org/licenses/LICENSE-2.0.txt
  * 
  * 2. CONTENIDO TEXTUAL (Cualquier texto, documentación o activos creativos): 
  *    Licenciado bajo Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International 
- *    (CC-BY-NC-SA-4.0). Ver: https://https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.txt
+ *    (CC-BY-NC-SA-4.0). Ver: https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.txt
  *    Este trabajo es un traducción al español de la obra Catéchisme de l'Église Catholique
  *    de The IntraText Digital Library, licenciado bajo CC-BY-NC-SA-3.0.
  * 
